sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:7: error: '<-' expected but ')' found.
	for(j-< 1 to i){
                      ^AlgInsertionSort:14: error: illegal start of simple expression
}
^